[package]
name = "node-cli"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Generic Substrate node implementation in Rust."
build = "build.rs"
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
default-run = "oak"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"

[package.metadata.wasm-pack.profile.release]
# `wasm-opt` has some problems on linux, see
# https://github.com/rustwasm/wasm-pack/issues/781 etc.
wasm-opt = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[badges]
travis-ci = { repository = "paritytech/substrate" }
maintenance = { status = "actively-developed" }
is-it-maintained-issue-resolution = { repository = "paritytech/substrate" }
is-it-maintained-open-issues = { repository = "paritytech/substrate" }

[[bin]]
name = "oak"
path = "bin/main.rs"
required-features = ["cli"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# third-party dependencies
codec = { package = "parity-scale-codec", version = "2.0.0" }
serde = { version = "1.0.126", features = ["derive"] }
futures = "0.3.16"
hex-literal = "0.3.3"
log = "0.4.8"
rand = "0.7.2"
structopt = { version = "0.3.8", optional = true }
serde_json = "1.0"

# primitives
sp-authority-discovery = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.12' }
sp-consensus-babe = { version = "0.10.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.12" }
grandpa-primitives = { version = "4.0.0-dev", package = "sp-finality-grandpa", git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.12" }
sp-api = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.12' }
sp-core = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.12' }
sp-runtime = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.12' }
sp-timestamp = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.12' }
sp-authorship = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.12' }
sp-inherents = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.12' }
sp-keyring = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.12' }
sp-keystore = { version = "0.10.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.12" }
sp-consensus = { version = "0.10.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.12" }
sp-transaction-pool = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.12' }
sp-transaction-storage-proof = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.12' }

# client dependencies
sc-client-api = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.12' }
sc-chain-spec = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.12' }
sc-consensus = { version = "0.10.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.12" }
sc-transaction-pool = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.12' }
sc-network = { version = "0.10.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.12" }
sc-consensus-slots = { version = "0.10.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.12" }
sc-consensus-babe = { version = "0.10.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.12" }
sc-consensus-uncles = { version = "0.10.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.12" }
grandpa = { version = "0.10.0-dev", package = "sc-finality-grandpa", git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.12" }
#sc-finality-grandpa-warp-sync = { version = "0.10.0-dev", optional = true, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.12" }
sc-rpc = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.12' }
sc-basic-authorship = { version = "0.10.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.12" }
sc-service = { version = "0.10.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.12" }
sc-telemetry = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.12' }
sc-executor = { version = "0.10.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.12' }
sc-authority-discovery = { version = "0.10.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.12" }
sc-sync-state-rpc = { version = "0.10.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.12" }

# parachain dependencies
#sp-consensus-aura = { branch = "polkadot-v0.9.12", default-features = false, git = 'https://github.com/paritytech/substrate.git' }
#sp-application-crypto = { branch = 'polkadot-v0.9.12', default-features = false, git = 'https://github.com/paritytech/substrate.git' }
#sp-std = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.12' }
cumulus-primitives-core = {  version = "0.1.0", git = 'https://github.com/paritytech/cumulus.git', branch = 'polkadot-v0.9.12' }

# frame dependencies
frame-system = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.12' }
frame-system-rpc-runtime-api = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.12' }
pallet-transaction-payment = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.12' }
pallet-im-online = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.12" }

# node-specific dependencies
node-runtime = {version = "2.0.2", path = '../../runtime'}
node-rpc = { version = "3.0.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.12" }
node-primitives = { version = "2.0.0", git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.12" }
node-executor = { version = "3.0.0-dev", path = '../executor' }

# CLI-specific dependencies
sc-cli = { version = "0.10.0-dev", optional = true, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.12" }
frame-benchmarking-cli = { version = "4.0.0-dev", optional = true, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.12" }
node-inspect = { version = "0.9.0-dev", optional = true, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.12"}
try-runtime-cli = { version = "0.10.0-dev", optional = true, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.12" }

[target.'cfg(target_arch="x86_64")'.dependencies]
node-executor = { version = "3.0.0-dev", features = [ "wasmtime" ], path = '../executor' }
sc-cli = { version = "0.10.0-dev", features = [ "wasmtime" ], optional = true, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.12" }
sc-service = { version = "0.10.0-dev", features = [ "wasmtime" ], default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.12" }
sp-trie = { version = "4.0.0-dev", features = ["memory-tracker"], default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.12" }

[dev-dependencies]
sc-keystore = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.12' }
sc-client-db = { version = "0.10.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.12' }
sc-consensus = { version = "0.10.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.12" }
sc-consensus-babe = { version = "0.10.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.12" }
sc-consensus-epochs = { version = "0.10.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.12" }
sc-service-test = { version = "2.0.0", git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.12" }
sc-transaction-pool-api = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.12" }
sp-tracing = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.12" }
futures = "0.3.16"
tempfile = "3.1.0"
assert_cmd = "2.0.2"
nix = "0.19"
serde_json = "1.0"
regex = "1"
platforms = "1.1"
async-std = { version = "1.10.0", features = ["attributes"] }
soketto = "0.4.2"
criterion = { version = "0.3.5", features = [ "async_tokio" ] }
tokio = { version = "1.10", features = ["macros", "time"] }
jsonrpsee-ws-client = { version = "0.3.1", default-features = false, features = ["tokio1"] }
wait-timeout = "0.2"
remote-externalities = { git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.12" }

[build-dependencies]
structopt = { version = "0.3.8", optional = true }
node-inspect = { version = "0.9.0-dev", optional = true, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.12" }
frame-benchmarking-cli = { version = "4.0.0-dev", optional = true, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.12" }
substrate-build-script-utils = { version = "3.0.0", optional = true, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.12" }
substrate-frame-cli = { version = "4.0.0-dev", optional = true, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.12" }
try-runtime-cli = { version = "0.10.0-dev", optional = true, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.12" }

sc-cli = { version = "0.10.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.12", optional = true }
pallet-balances = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.12" }

[features]
default = ["cli"]
cli = [
	"node-executor/wasmi-errno",
	"node-inspect",
	"sc-cli",
	"frame-benchmarking-cli",
	"substrate-frame-cli",
	"sc-service/db",
	#"sc-finality-grandpa-warp-sync",
	"structopt",
	"substrate-build-script-utils",
	"try-runtime-cli",
]
runtime-benchmarks = [
	"node-runtime/runtime-benchmarks",
	"frame-benchmarking-cli",
]
# Enable features that allow the runtime to be tried and debugged. Name might be subject to change
# in the near future.
try-runtime = ["node-runtime/try-runtime", "try-runtime-cli"]

[[bench]]
name = "transaction_pool"
harness = false